# opengl_test

./: CMakeLists.txt  README.md
res/shaders/: Basic.shader  SandboxLayer.shader
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  SandboxLayer.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp
src/01.设置openGl和创建窗口/: 01.cpp
src/03.顶点缓冲区和绘制三角形/: main.cpp
src/04.顶点属性和内存布局/: 04.cpp
src/06-08.着色器/: main.cpp
src/09.索引缓冲区/: 09.cpp
src/10.错误处理/: 10.cpp
src/11.统一变量/: 11.cpp
src/12.顶点数组/: 12.cpp
src/13.抽象opengl成类/: 13.cpp
src/14.缓冲区布局抽象/: 14.cpp
src/15.着色器抽象/: 15.cpp
src/process/02.使用现代openGl/: 02.cpp
src/process/03.顶点缓冲区和绘制三角形/: 03.cpp
src/process/04.顶点属性和内存布局/: 04.cpp
src/process/06-08.着色器/: 06-08.cpp
src/process/09.索引缓冲区/: 09.cpp
src/process/10.错误处理/: 10.cpp
src/process/11.统一变量/: 11.cpp
src/process/12.顶点数组/: 12.cpp
src/process/14.缓冲区布局抽象/: 14.cpp
src/process/15.着色器抽象/: 15.cpp
src/process/16.编写一个基础渲染器/: 16.cpp
src/process/17.关于纹理/: 17.cpp
src/process/18.关于混合/: 18.txt
src/process/19.关于数学库/: 19.cpp
src/process/20.关于投影矩阵/: 20.cpp
src/process/21.关于mvp/: 21.cpp
src/process/22.关于imgui/: 22.cpp
src/process/23.批量渲染对象/: 23.cpp
src/process/24.设置一个测试框架/: 24.cpp
src/process/25.创建测试/: 25.cpp
src/process/26.创建纹理测试/: 26.cpp
src/process/27.优化统一变量/: 27.txt
src/process/28.批量渲染多个图形/: 28.cpp
src/process/29.批量渲染-关于颜色/: 29.cpp
src/process/30.批量渲染-关于纹理/: 30.cpp
src/process/31.批量渲染-动态几何/: 31.cpp
src/process/32.批量渲染-关于索引/: 32.cpp
tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
